--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         </nav>
 
         <ul class="contacts-header">
-          <li class="contacts">
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <li class="contacts email">
+            <a href="mailto:info@devstudio.com" class="link email">info@devstudio.com</a>
           </li>
-          <li class="contacts">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <li class="contacts tel">
+            <a href="tel:+380961111111" class="link tel">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -161,18 +161,46 @@
           </ul>
         </div>
       </section>
+
+      <section class="section">
+        <div class="container">
+          <h2 class="section-header">Постоянные клиенты</h2>
+          <ul class="clients">
+            <li>
+              <a href=""> <svg width="170" height="92"></svg> </a>
+            </li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a class="logo footer-logo" lang="en" href="./index.html"
-          >Web<span class="logo-white">Studio</span></a
-        >
-        <address class="address">
-          <p class="physical-address">г. Киев, пр-т Леси Украинки, 26</p>
-          <a class="footer-contact email" href="mailto:info@example.com">info@example.com</a>
-          <a class="footer-contact" href="tel:+380991111111">+38 099 111 11 11</a>
-        </address>
+      <div class="container footer-block">
+        <div class="contact-data">
+          <a class="logo footer-logo" lang="en" href="./index.html"
+            >Web<span class="logo-white">Studio</span></a
+          >
+          <address class="address">
+            <p class="physical-address">г. Киев, пр-т Леси Украинки, 26</p>
+            <a class="footer-contact email" href="mailto:info@example.com">info@example.com</a>
+            <a class="footer-contact" href="tel:+380991111111">+38 099 111 11 11</a>
+          </address>
+        </div>
+
+        <div class="socials">
+          <p class="join">присоединяйтесь</p>
+          <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
