--- a/index.html
+++ b/index.html
@@ -36,9 +36,19 @@
 
         <ul class="contacts-header">
           <li class="contacts email">
+            <div class="icon-header">
+              <svg class="icon-email" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+            </div>
             <a href="mailto:info@devstudio.com" class="link email">info@devstudio.com</a>
           </li>
           <li class="contacts tel">
+            <div class="icon-header">
+              <svg class="icon-tel" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+            </div>
             <a href="tel:+380961111111" class="link tel">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -61,24 +71,36 @@
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="features">
             <li class="features-list">
+              <svg class="icon-features" width="270" height="120">
+                <use href="./images/symbol-defs.svg#icon-Group-1"></use>
+              </svg>
               <h3 class="features-item">Внимание к деталям</h3>
               <p class="features-description">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="features-list">
+              <svg class="icon-features" width="270" height="120">
+                <use href="./images/symbol-defs.svg#icon-Group-2"></use>
+              </svg>
               <h3 class="features-item">Пунктуальность</h3>
               <p class="features-description">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="features-list">
+              <svg class="icon-features" width="270" height="120">
+                <use href="./images/symbol-defs.svg#icon-Group-3"></use>
+              </svg>
               <h3 class="features-item">Планирование</h3>
               <p class="features-description">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="features-list">
+              <svg class="icon-features" width="270" height="120">
+                <use href="./images/symbol-defs.svg#icon-Group-4"></use>
+              </svg>
               <h3 class="features-item">Современные технологии</h3>
               <p class="features-description">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -125,6 +147,36 @@
               <div class="team-description">
                 <h3 class="team-name">Игорь Демьяненко</h3>
                 <p class="team-job">Product Designer</p>
+                <ul class="networks">
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-member">
@@ -132,6 +184,36 @@
               <div class="team-description">
                 <h3 class="team-name">Ольга Репина</h3>
                 <p class="team-job">Frontend Developer</p>
+                <ul class="networks">
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-member">
@@ -144,6 +226,36 @@
               <div class="team-description">
                 <h3 class="team-name">Николай Тарасов</h3>
                 <p class="team-job">Marketing</p>
+                <ul class="networks">
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-member">
@@ -156,6 +268,36 @@
               <div class="team-description">
                 <h3 class="team-name">Михаил Ермаков</h3>
                 <p class="team-job">UI Designer</p>
+                <ul class="networks">
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="social-link">
+                      <svg class="networks-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -166,14 +308,48 @@
         <div class="container">
           <h2 class="section-header">Постоянные клиенты</h2>
           <ul class="clients">
-            <li>
-              <a href=""> <svg width="170" height="92"></svg> </a>
+            <li class="client-block">
+              <a href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Client-1"></use>
+                </svg>
+              </a>
             </li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li class="client-block">
+              <a href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Client-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-block">
+              <a href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Client-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-block">
+              <a href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Client-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-block">
+              <a href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Client-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-block">
+              <a href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Client-6"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
@@ -194,11 +370,35 @@
 
         <div class="socials">
           <p class="join">присоединяйтесь</p>
-          <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+          <ul class="networks">
+            <li class="networks-item">
+              <a href="" class="social-link-footer">
+                <svg class="networks-icon-footer" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="networks-item">
+              <a href="" class="social-link-footer">
+                <svg class="networks-icon-footer" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="networks-item">
+              <a href="" class="social-link-footer">
+                <svg class="networks-icon-footer" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="networks-item">
+              <a href="" class="social-link-footer">
+                <svg class="networks-icon-footer" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
