--- a/portfolio.html
+++ b/portfolio.html
@@ -36,11 +36,21 @@
         </nav>
 
         <ul class="contacts-header">
-          <li class="contacts">
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <li class="contacts email">
+            <div class="icon-header">
+              <svg class="icon-email" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+            </div>
+            <a href="mailto:info@devstudio.com" class="link email">info@devstudio.com</a>
           </li>
-          <li class="contacts">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <li class="contacts tel">
+            <div class="icon-header">
+              <svg class="icon-tel" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+            </div>
+            <a href="tel:+380961111111" class="link tel">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -183,15 +193,51 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a class="logo footer-logo" lang="en" href="./index.html"
-          >Web<span class="logo-white">Studio</span></a
-        >
-        <address class="address">
-          <p class="physical-address">г. Киев, пр-т Леси Украинки, 26</p>
-          <a class="footer-contact email" href="mailto:info@example.com">info@example.com</a>
-          <a class="footer-contact" href="tel:+380991111111">+38 099 111 11 11</a>
-        </address>
+      <div class="container footer-block">
+        <div class="contact-data">
+          <a class="logo footer-logo" lang="en" href="./index.html"
+            >Web<span class="logo-white">Studio</span></a
+          >
+          <address class="address">
+            <p class="physical-address">г. Киев, пр-т Леси Украинки, 26</p>
+            <a class="footer-contact email" href="mailto:info@example.com">info@example.com</a>
+            <a class="footer-contact" href="tel:+380991111111">+38 099 111 11 11</a>
+          </address>
+        </div>
+
+        <div class="socials">
+          <p class="join">присоединяйтесь</p>
+          <ul class="networks">
+            <li class="networks-item">
+              <a href="" class="social-link-footer">
+                <svg class="networks-icon-footer" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="networks-item">
+              <a href="" class="social-link-footer">
+                <svg class="networks-icon-footer" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="networks-item">
+              <a href="" class="social-link-footer">
+                <svg class="networks-icon-footer" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="networks-item">
+              <a href="" class="social-link-footer">
+                <svg class="networks-icon-footer" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
