--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
 
         <ul class="contacts-header">
           <li class="contacts email">
-            <div class="icon-header">
-              <svg class="icon-email" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+            <a href="mailto:info@devstudio.com" class="link email">
+              <svg class="icon-header" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
-            </div>
-            <a href="mailto:info@devstudio.com" class="link email">info@devstudio.com</a>
+              info@devstudio.com</a
+            >
           </li>
           <li class="contacts tel">
-            <div class="icon-header">
-              <svg class="icon-tel" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+            <a href="tel:+380961111111" class="link tel">
+              <svg class="icon-header" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
-            </div>
-            <a href="tel:+380961111111" class="link tel">+38 096 111 11 11</a>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -72,7 +72,7 @@
           <ul class="features">
             <li class="features-list">
               <svg class="icon-features" width="270" height="120">
-                <use href="./images/symbol-defs.svg#icon-Group-1"></use>
+                <use href="./images/icons.svg#icon-Group-1"></use>
               </svg>
               <h3 class="features-item">Внимание к деталям</h3>
               <p class="features-description">
@@ -81,7 +81,7 @@
             </li>
             <li class="features-list">
               <svg class="icon-features" width="270" height="120">
-                <use href="./images/symbol-defs.svg#icon-Group-2"></use>
+                <use href="./images/icons.svg#icon-Group-2"></use>
               </svg>
               <h3 class="features-item">Пунктуальность</h3>
               <p class="features-description">
@@ -90,7 +90,7 @@
             </li>
             <li class="features-list">
               <svg class="icon-features" width="270" height="120">
-                <use href="./images/symbol-defs.svg#icon-Group-3"></use>
+                <use href="./images/icons.svg#icon-Group-3"></use>
               </svg>
               <h3 class="features-item">Планирование</h3>
               <p class="features-description">
@@ -99,7 +99,7 @@
             </li>
             <li class="features-list">
               <svg class="icon-features" width="270" height="120">
-                <use href="./images/symbol-defs.svg#icon-Group-4"></use>
+                <use href="./images/icons.svg#icon-Group-4"></use>
               </svg>
               <h3 class="features-item">Современные технологии</h3>
               <p class="features-description">
@@ -151,28 +151,28 @@
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -188,28 +188,28 @@
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -230,28 +230,28 @@
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -272,28 +272,28 @@
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="social-link">
                       <svg class="networks-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -309,44 +309,44 @@
           <h2 class="section-header">Постоянные клиенты</h2>
           <ul class="clients">
             <li class="client-block">
-              <a href="">
+              <a href="client-link">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-Client-1"></use>
+                  <use href="./images/icons.svg#icon-Client-1"></use>
                 </svg>
               </a>
             </li>
             <li class="client-block">
-              <a href="">
+              <a href="client-link">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-Client-2"></use>
+                  <use href="./images/icons.svg#icon-Client-2"></use>
                 </svg>
               </a>
             </li>
             <li class="client-block">
-              <a href="">
+              <a href="client-link">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-Client-3"></use>
+                  <use href="./images/icons.svg#icon-Client-3"></use>
                 </svg>
               </a>
             </li>
             <li class="client-block">
-              <a href="">
+              <a href="client-link">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-Client-4"></use>
+                  <use href="./images/icons.svg#icon-Client-4"></use>
                 </svg>
               </a>
             </li>
             <li class="client-block">
-              <a href="">
+              <a href="client-link">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-Client-5"></use>
+                  <use href="./images/icons.svg#icon-Client-5"></use>
                 </svg>
               </a>
             </li>
             <li class="client-block">
-              <a href="">
+              <a href="client-link">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-Client-6"></use>
+                  <use href="./images/icons.svg#icon-Client-6"></use>
                 </svg>
               </a>
             </li>
@@ -374,28 +374,28 @@
             <li class="networks-item">
               <a href="" class="social-link-footer">
                 <svg class="networks-icon-footer" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="networks-item">
               <a href="" class="social-link-footer">
                 <svg class="networks-icon-footer" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="networks-item">
               <a href="" class="social-link-footer">
                 <svg class="networks-icon-footer" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="networks-item">
               <a href="" class="social-link-footer">
                 <svg class="networks-icon-footer" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
