--- a/portfolio.html
+++ b/portfolio.html
@@ -37,20 +37,20 @@
 
         <ul class="contacts-header">
           <li class="contacts email">
-            <div class="icon-header">
-              <svg class="icon-email" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+            <a href="mailto:info@devstudio.com" class="link email">
+              <svg class="icon-header" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
-            </div>
-            <a href="mailto:info@devstudio.com" class="link email">info@devstudio.com</a>
+              info@devstudio.com</a
+            >
           </li>
           <li class="contacts tel">
-            <div class="icon-header">
-              <svg class="icon-tel" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+            <a href="tel:+380961111111" class="link tel">
+              <svg class="icon-header" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
-            </div>
-            <a href="tel:+380961111111" class="link tel">+38 096 111 11 11</a>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -211,28 +211,28 @@
             <li class="networks-item">
               <a href="" class="social-link-footer">
                 <svg class="networks-icon-footer" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="networks-item">
               <a href="" class="social-link-footer">
                 <svg class="networks-icon-footer" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="networks-item">
               <a href="" class="social-link-footer">
                 <svg class="networks-icon-footer" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="networks-item">
               <a href="" class="social-link-footer">
                 <svg class="networks-icon-footer" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
