--- a/index.html
+++ b/index.html
@@ -307,44 +307,45 @@
       <section class="section">
         <div class="container">
           <h2 class="section-header">Постоянные клиенты</h2>
-          <ul class="clients">
-            <li class="client-block">
-              <a href="client-link">
+
+          <ul class="clients-list">
+            <li class="client">
+              <a href="client-block">
                 <svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Client-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-block">
-              <a href="client-link">
+            <li class="client">
+              <a href="client-block">
                 <svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Client-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-block">
-              <a href="client-link">
+            <li class="client">
+              <a href="client-block">
                 <svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Client-3"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-block">
-              <a href="client-link">
+            <li class="client">
+              <a href="client-block">
                 <svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Client-4"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-block">
-              <a href="client-link">
+            <li class="client">
+              <a href="client-block">
                 <svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Client-5"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-block">
-              <a href="client-link">
+            <li class="client">
+              <a href="client-block">
                 <svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Client-6"></use>
                 </svg>
