--- a/index.html
+++ b/index.html
@@ -310,42 +310,42 @@
 
           <ul class="clients-list">
             <li class="client">
-              <a href="client-block">
+              <a class="client-link" href="">
                 <svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Client-1"></use>
                 </svg>
               </a>
             </li>
             <li class="client">
-              <a href="client-block">
+              <a class="client-link" href="">
                 <svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Client-2"></use>
                 </svg>
               </a>
             </li>
             <li class="client">
-              <a href="client-block">
+              <a class="client-link" href="">
                 <svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Client-3"></use>
                 </svg>
               </a>
             </li>
             <li class="client">
-              <a href="client-block">
+              <a class="client-link" href="">
                 <svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Client-4"></use>
                 </svg>
               </a>
             </li>
             <li class="client">
-              <a href="client-block">
+              <a class="client-link" href="">
                 <svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Client-5"></use>
                 </svg>
               </a>
             </li>
             <li class="client">
-              <a href="client-block">
+              <a class="client-link" href="">
                 <svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Client-6"></use>
                 </svg>
